@@ -1,3 +1,9 @@
+2012-12-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCglue.c (emitOverlay): fixed bug #3596899
+	* support/regression/tests/gcc-tortue-execute-20021118-2.c:
+	  re-enabled test (fixed by my 2012-12-26 commit)
+
 2012-12-26 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCval.c: inserted macros for strtoll and strtoull
